spiceparser/eqn.h

typedef enum itemop_e
{
  OPeolist,
  OPeol_const,  /* special terminator, for constant (reduced memory usage) */
  OPeol_valp,  /* special terminator, for indirection (float *) */
  OPeol_qty,   /* for simplified decoding of eol */

  OPlit,
  OPlitm,
  OPlitv,
  OPlitvm,

  OPval,
  OPvalm,
  OPadd,
  OPsub,

  OPmul,
  OPdiv,
  OPexp,
  OPopen,

  OPclose
}itemop_t;
typedef int eqn_litref_t;
typedef struct eqntokenlit_st
{
  char *lit;
  eqn_litref_t ref;
  float cache;
}eqntokenlit_t;
typedef struct eqntokenval_st
{
  float x;
}eqntokenval_t;
typedef struct eqntokenpval_st
{
  float *xp;
} eqntokenpval_t;
typedef struct eqntoken_st
{
  itemop_t op;
  union lit_val_un
  {
    eqntokenlit_t lit;
    eqntokenval_t val;
    eqntokenpval_t pval;
  }z;
}eqntoken_t;
typedef struct plookup_st
{
  eqn_litref_t (*lookup)(struct plookup_st *user, char *str);
  void *user;
}plookup_t;
typedef struct eqn_st
{
#ifdef NO_EQUATIONS
  float val;
#else
  eqntoken_t *eqn;  
#endif
}eqn_t;
void debug_eqn(void *dbg_fp, char *str, eqn_t *eqn);
eqn_t eqn_undefined(void);
eqn_t eqn_valp(float *valp);
float eqn_setvalp(eqn_t *eqn, float *valp);
int eqn_is_undefined(eqn_t e);
eqntoken_t *eqntok_parse(char *str);
eqntoken_t *eqntoken_next(eqntoken_t *p);
int eqntok_depend(eqntoken_t *list, plookup_t *lookup);
int eqntok_eval(float *res, eqntoken_t *list);
float parse_float(unsigned char *val);
eqntoken_t *eqntok_copy(eqntoken_t *p);
float eqn_setval(eqn_t *eqn, float val);
float eqn_getval_(eqn_t *eqn);
eqn_t eqn_copy(eqn_t e);
eqn_t eqn_copy_m(eqn_t e, float m);
eqn_t eqn_empty(void);
eqn_t eqn_parse(unsigned char *val);
void *eqn_mem_new(void);
void eqn_mem_push(void *p);
void *eqn_mem_pop(void);
void eqn_mem_free(void *p);
/**  dependency lists  ***/


typedef struct eqnlist_st
{
  names_t *params;
  list_t  eqnlist;
  list_t  cache;
}eqnlist_t;
void   eqnl_depend(eqnlist_t *nl, eqn_t e);
void   eqnl_free(eqnlist_t *nl);
void   eqnl_init(eqnlist_t *nl);
void   eqnl_evaldep(eqnlist_t *nl);
float  eqnl_eval(eqnlist_t *nl, eqn_t e);
int    eqnl_add(eqnlist_t *nl, eqn_t e, char *str);
eqn_t  eqnl_eqn(eqnlist_t *nl, int index);
int    eqnl_find(eqnlist_t *nl, char *str);
int    eqnl_define(eqnlist_t *nl, int index, float *valp);
int    eqnl_is_undefined(eqnlist_t *nl, int index);
int    eqnl_qty(eqnlist_t *nl);
char * eqnl_lookup(eqnlist_t *nl, int index);
void eqnl_autodepend(eqnlist_t *nl);