spiceparser/spiceparser.py


# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 183
if hasattr(_libs['spiceparser'], 'debug_eqn'):
    debug_eqn = _libs['spiceparser'].debug_eqn
    debug_eqn.argtypes = [POINTER(None), String, POINTER(eqn_t)]
    debug_eqn.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 184
if hasattr(_libs['spiceparser'], 'eqn_undefined'):
    eqn_undefined = _libs['spiceparser'].eqn_undefined
    eqn_undefined.argtypes = []
    eqn_undefined.restype = eqn_t

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 185
if hasattr(_libs['spiceparser'], 'eqn_valp'):
    eqn_valp = _libs['spiceparser'].eqn_valp
    eqn_valp.argtypes = [POINTER(c_float)]
    eqn_valp.restype = eqn_t

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 186
if hasattr(_libs['spiceparser'], 'eqn_setvalp'):
    eqn_setvalp = _libs['spiceparser'].eqn_setvalp
    eqn_setvalp.argtypes = [POINTER(eqn_t), POINTER(c_float)]
    eqn_setvalp.restype = c_float

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 187
if hasattr(_libs['spiceparser'], 'eqn_is_undefined'):
    eqn_is_undefined = _libs['spiceparser'].eqn_is_undefined
    eqn_is_undefined.argtypes = [eqn_t]
    eqn_is_undefined.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 189
if hasattr(_libs['spiceparser'], 'eqntok_parse'):
    eqntok_parse = _libs['spiceparser'].eqntok_parse
    eqntok_parse.argtypes = [String]
    eqntok_parse.restype = POINTER(eqntoken_t)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 191
if hasattr(_libs['spiceparser'], 'eqntoken_next'):
    eqntoken_next = _libs['spiceparser'].eqntoken_next
    eqntoken_next.argtypes = [POINTER(eqntoken_t)]
    eqntoken_next.restype = POINTER(eqntoken_t)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 192
if hasattr(_libs['spiceparser'], 'eqntok_depend'):
    eqntok_depend = _libs['spiceparser'].eqntok_depend
    eqntok_depend.argtypes = [POINTER(eqntoken_t), POINTER(plookup_t)]
    eqntok_depend.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 193
if hasattr(_libs['spiceparser'], 'eqntok_eval'):
    eqntok_eval = _libs['spiceparser'].eqntok_eval
    eqntok_eval.argtypes = [POINTER(c_float), POINTER(eqntoken_t)]
    eqntok_eval.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 194
if hasattr(_libs['spiceparser'], 'parse_float'):
    parse_float = _libs['spiceparser'].parse_float
    parse_float.argtypes = [POINTER(c_ubyte)]
    parse_float.restype = c_float

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 195
if hasattr(_libs['spiceparser'], 'eqntok_copy'):
    eqntok_copy = _libs['spiceparser'].eqntok_copy
    eqntok_copy.argtypes = [POINTER(eqntoken_t)]
    eqntok_copy.restype = POINTER(eqntoken_t)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 196
if hasattr(_libs['spiceparser'], 'eqn_setval'):
    eqn_setval = _libs['spiceparser'].eqn_setval
    eqn_setval.argtypes = [POINTER(eqn_t), c_float]
    eqn_setval.restype = c_float

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 197
if hasattr(_libs['spiceparser'], 'eqn_getval_'):
    eqn_getval_ = _libs['spiceparser'].eqn_getval_
    eqn_getval_.argtypes = [POINTER(eqn_t)]
    eqn_getval_.restype = c_float

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 199
if hasattr(_libs['spiceparser'], 'eqn_copy'):
    eqn_copy = _libs['spiceparser'].eqn_copy
    eqn_copy.argtypes = [eqn_t]
    eqn_copy.restype = eqn_t

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 200
if hasattr(_libs['spiceparser'], 'eqn_copy_m'):
    eqn_copy_m = _libs['spiceparser'].eqn_copy_m
    eqn_copy_m.argtypes = [eqn_t, c_float]
    eqn_copy_m.restype = eqn_t

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 201
if hasattr(_libs['spiceparser'], 'eqn_empty'):
    eqn_empty = _libs['spiceparser'].eqn_empty
    eqn_empty.argtypes = []
    eqn_empty.restype = eqn_t

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 202
if hasattr(_libs['spiceparser'], 'eqn_parse'):
    eqn_parse = _libs['spiceparser'].eqn_parse
    eqn_parse.argtypes = [POINTER(c_ubyte)]
    eqn_parse.restype = eqn_t

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 204
if hasattr(_libs['spiceparser'], 'eqn_mem_new'):
    eqn_mem_new = _libs['spiceparser'].eqn_mem_new
    eqn_mem_new.argtypes = []
    eqn_mem_new.restype = POINTER(None)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 205
if hasattr(_libs['spiceparser'], 'eqn_mem_push'):
    eqn_mem_push = _libs['spiceparser'].eqn_mem_push
    eqn_mem_push.argtypes = [POINTER(None)]
    eqn_mem_push.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 206
if hasattr(_libs['spiceparser'], 'eqn_mem_pop'):
    eqn_mem_pop = _libs['spiceparser'].eqn_mem_pop
    eqn_mem_pop.argtypes = []
    eqn_mem_pop.restype = POINTER(None)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 207
if hasattr(_libs['spiceparser'], 'eqn_mem_free'):
    eqn_mem_free = _libs['spiceparser'].eqn_mem_free
    eqn_mem_free.argtypes = [POINTER(None)]
    eqn_mem_free.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 218
class struct_eqnlist_st(Structure):
    pass

struct_eqnlist_st.__slots__ = [
    'params',
    'eqnlist',
    'cache',
]
struct_eqnlist_st._fields_ = [
    ('params', POINTER(names_t)),
    ('eqnlist', list_t),
    ('cache', list_t),
]

eqnlist_t = struct_eqnlist_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 218

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 220
if hasattr(_libs['spiceparser'], 'eqnl_depend'):
    eqnl_depend = _libs['spiceparser'].eqnl_depend
    eqnl_depend.argtypes = [POINTER(eqnlist_t), eqn_t]
    eqnl_depend.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 221
if hasattr(_libs['spiceparser'], 'eqnl_free'):
    eqnl_free = _libs['spiceparser'].eqnl_free
    eqnl_free.argtypes = [POINTER(eqnlist_t)]
    eqnl_free.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 222
if hasattr(_libs['spiceparser'], 'eqnl_init'):
    eqnl_init = _libs['spiceparser'].eqnl_init
    eqnl_init.argtypes = [POINTER(eqnlist_t)]
    eqnl_init.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 223
if hasattr(_libs['spiceparser'], 'eqnl_evaldep'):
    eqnl_evaldep = _libs['spiceparser'].eqnl_evaldep
    eqnl_evaldep.argtypes = [POINTER(eqnlist_t)]
    eqnl_evaldep.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 224
if hasattr(_libs['spiceparser'], 'eqnl_eval'):
    eqnl_eval = _libs['spiceparser'].eqnl_eval
    eqnl_eval.argtypes = [POINTER(eqnlist_t), eqn_t]
    eqnl_eval.restype = c_float

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 225
if hasattr(_libs['spiceparser'], 'eqnl_add'):
    eqnl_add = _libs['spiceparser'].eqnl_add
    eqnl_add.argtypes = [POINTER(eqnlist_t), eqn_t, String]
    eqnl_add.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 226
if hasattr(_libs['spiceparser'], 'eqnl_eqn'):
    eqnl_eqn = _libs['spiceparser'].eqnl_eqn
    eqnl_eqn.argtypes = [POINTER(eqnlist_t), c_int]
    eqnl_eqn.restype = eqn_t

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 227
if hasattr(_libs['spiceparser'], 'eqnl_find'):
    eqnl_find = _libs['spiceparser'].eqnl_find
    eqnl_find.argtypes = [POINTER(eqnlist_t), String]
    eqnl_find.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 228
if hasattr(_libs['spiceparser'], 'eqnl_define'):
    eqnl_define = _libs['spiceparser'].eqnl_define
    eqnl_define.argtypes = [POINTER(eqnlist_t), c_int, POINTER(c_float)]
    eqnl_define.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 229
if hasattr(_libs['spiceparser'], 'eqnl_is_undefined'):
    eqnl_is_undefined = _libs['spiceparser'].eqnl_is_undefined
    eqnl_is_undefined.argtypes = [POINTER(eqnlist_t), c_int]
    eqnl_is_undefined.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 230
if hasattr(_libs['spiceparser'], 'eqnl_qty'):
    eqnl_qty = _libs['spiceparser'].eqnl_qty
    eqnl_qty.argtypes = [POINTER(eqnlist_t)]
    eqnl_qty.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 231
if hasattr(_libs['spiceparser'], 'eqnl_lookup'):
    eqnl_lookup = _libs['spiceparser'].eqnl_lookup
    eqnl_lookup.argtypes = [POINTER(eqnlist_t), c_int]
    if sizeof(c_int) == sizeof(c_void_p):
        eqnl_lookup.restype = ReturnString
    else:
        eqnl_lookup.restype = String
        eqnl_lookup.errcheck = ReturnString

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 232
if hasattr(_libs['spiceparser'], 'eqnl_autodepend'):
    eqnl_autodepend = _libs['spiceparser'].eqnl_autodepend
    eqnl_autodepend.argtypes = [POINTER(eqnlist_t)]
    eqnl_autodepend.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\equations.h: 167
class struct_eqndef_st(Structure):
    pass

struct_eqndef_st.__slots__ = [
    'name',
    'eqn',
]
struct_eqndef_st._fields_ = [
    ('name', String),
    ('eqn', eqn_t),
]

eqndef_t = struct_eqndef_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\equations.h: 167

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\equations.h: 171
if hasattr(_libs['spiceparser'], 'equation_parse'):
    equation_parse = _libs['spiceparser'].equation_parse
    equation_parse.argtypes = [POINTER(uchar)]
    equation_parse.restype = eqn_t

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\equations.h: 172
if hasattr(_libs['spiceparser'], 'equation_depend'):
    equation_depend = _libs['spiceparser'].equation_depend
    equation_depend.argtypes = [eqn_t, CFUNCTYPE(UNCHECKED(POINTER(c_float)), POINTER(None), String), POINTER(None)]
    equation_depend.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\equations.h: 173
if hasattr(_libs['spiceparser'], 'equation_eval'):
    equation_eval = _libs['spiceparser'].equation_eval
    equation_eval.argtypes = [POINTER(eqn_t)]
    equation_eval.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\equations.h: 174
if hasattr(_libs['spiceparser'], 'equation_empty'):
    equation_empty = _libs['spiceparser'].equation_empty
    equation_empty.argtypes = [eqn_t]
    equation_empty.restype = eqn_t

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\equations.h: 175
if hasattr(_libs['spiceparser'], 'equation_debug'):
    equation_debug = _libs['spiceparser'].equation_debug
    equation_debug.argtypes = [eqn_t, POINTER(None)]
    equation_debug.restype = None

enum_eval_op_en = c_int # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eval.h: 49

EOnone = 0 # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eval.h: 49

EOadd = (EOnone + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eval.h: 49

EOsub = (EOadd + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eval.h: 49

EOneg = (EOsub + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eval.h: 49

EOmul = (EOneg + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eval.h: 49

EOdiv = (EOmul + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eval.h: 49

EOmod = (EOdiv + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eval.h: 49

EOleft = (EOmod + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eval.h: 49

EOright = (EOleft + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eval.h: 49

EObitxor = (EOright + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eval.h: 49

EObitand = (EObitxor + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eval.h: 49
